# openap

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-publish.yml
dataset/C550/: phlab_20170320_10.csv
examples/: example_fuel_emission_opensky_data.ipynb  example_fuel_qar_data.ipynb
examples/data/: flight_a319_opensky.csv
openap/: __init__.py  aero.py  bada4.py  base.py  contrail.py  drag.py  emission.py  filters.py  fuel.py  gen.py  interval.py  kinematic.py  mass.py  nav.py  phase.py  prop.py  segment.py  statistics.py  thrust.py  utils.py
openap/addon/: bada4.py
openap/casadi/: __init__.py  aero_override.py  numpy_override.py
openap/data/: README.md
openap/data/1_aircraft_and_engines/: aircraft.json
openap/data/5_navigation/: airports.csv
openap/data/aircraft/: _synonym.csv  a19n.yml  a20n.yml  a21n.yml  a318.yml  a319.yml  a320.yml  a321.yml  a332.yml  a333.yml  a343.yml  a359.yml  a388.yml  b37m.yml  b38m.yml  b39m.yml  b3xm.yml  b734.yml  b737.yml  b738.yml  b739.yml  b744.yml  b748.yml  b752.yml  b763.yml  b772.yml  b773.yml  b77w.yml  b788.yml  b789.yml  c550.yml  e145.yml  e170.yml  e190.yml  e195.yml  e75l.yml  glf6.yml
openap/data/dragpolar/: _synonym.csv  a20n.yml  a319.yml  a320.yml  a321.yml  a332.yml  a333.yml  a343.yml  a359.yml  a388.yml  b38m.yml  b734.yml  b737.yml  b738.yml  b739.yml  b744.yml  b748.yml  b752.yml  b772.yml  b77w.yml  b788.yml  b789.yml  c550.yml  dragpolar.csv  e190.yml  e195.yml  e75l.yml  glf6.yml
openap/data/engine/: engine_cruise_performance.csv  engines.csv  engines.txt
openap/data/fuel/: _synonym.csv  a318.yml  a319.yml  a320.yml  a321.yml  a332.yml  a333.yml  b734.yml  b737.yml  b738.yml  b739.yml  e170.yml  e190.yml  e195.yml  e75l.yml  fuel_models.csv
openap/data/nav/: airports.csv
openap/data/wrap/: _synonym.csv  a319.csv  a319.txt  a320.csv  a320.txt  a321.txt  a332.txt  a333.csv  a333.txt  a343.csv  a343.txt  a388.csv  a388.txt  b737.csv  b737.txt  b738.txt  b739.txt  b744.csv  b744.txt  b752.csv  b752.txt  b763.txt  b77w.csv  b77w.txt  b788.csv  b788.txt  b789.csv  b789.txt  e190.txt
openap/extra/: __init__.py  aero.py  filters.py  fuzzy.py  nav.py  statistics.py
openap/traj/: gen.py  opt.py
scripts/: acropole_aircraft_params.csv  build_fuel_model.py  build_fuel_model_from_acropole.py  engine2.py  gen_airport_database.py  gen_engine_cruise_perf.py  gen_engine_data_v27.py  inspect_engine_ff_emission.py  plot_fuel_model.py  test.csv  test_acropole.py  wrap_csv_to_fwf.py
scripts/db/: engines.csv
scripts/input/: civtfspec.csv  edb-emissions-databank v23 (web).xlsx  edb-emissions-databank v25a (web).xlsx  edb-emissions-databank v27 (web).xlsx
scripts/input/wrap/: a319.csv  a320.csv  b739.csv  b763.csv  b789.csv
test/: example.ipynb  test_actypes.py  test_bada.py  test_drag.py  test_emission.py  test_fuel.py  test_import.py  test_kinematic.py  test_nav.py  test_phase.py  test_prop.py  test_thrust.py  test_trajectory.py  test_utils.py
test/data/: flight2.csv  flight3.csv  flight4.csv  flight_a320.csv  flight_phase_test.csv  flight_phlab.csv
test/flights/C550/: phlab_20170320_08.csv  phlab_20170320_12.csv  phlab_20170320_14.csv
tools/: README.md  build_fuel_model_from_acropole.py  engine2.py  extract.py  fuel_flow_correction_factor.py  gen_airport_database.py  gen_engine_cruise_perf.py  gen_engine_data.py  gen_engine_data_v27.py  gen_engine_database.py  gen_engine_ei_co.py  gen_engine_ei_hc.py  gen_engine_ei_nox.py  gen_engine_emission_data.py  inspect_engine_ff_emission.py  wrap_csv_to_fwf.py
tools/db/: all_aircraft.json  emission.csv  emission.txt  engines.csv  engines.txt
tools/input/: civtfspec.xls  edb-emissions-databank v28B (web).xlsx  engine_cruise_performance.csv
tools/input/wrap/: a321.csv  a332.csv  a333.csv  a343.csv  a388.csv  b737.csv  b738.csv  b739.csv  b744.csv  b752.csv  b763.csv  b77w.csv  b788.csv  e190.csv
