[tool.poetry]
name = "openap"
version = "2.0"
description = "Open Aircraft Performance Model (OpenAP) in Python"
homepage = "https://openap.dev"
repository = "https://github.com/junzis/openap"
authors = ["Junzi Sun <j.sun-1@tudelft.nl>"]
license = "GNU Lesser General Public License v3 (LGPLv3)"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "openap", from = "." }]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.24"
scipy = ">=1.7"
pandas = ">=1.2"
pyyaml = ">=5.1"
matplotlib = ">=3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj"]
