[project]
name = "openap"
version = "2.2"
description = "Open Aircraft Performance Model (OpenAP) in Python"
authors = [{ name = "Junzi Sun", email = "j.sun-1@tudelft.nl" }]
license = { text = "GNU LGPL v3" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.7",
    "pandas>=1.2",
    "pyyaml>=5.1",
    "matplotlib>=3.1",
]

[project.urls]
homepage = "https://openap.dev"
repository = "https://github.com/junzis/openap"
issues = "https://github.com/junzis/openap/issues"

[tool.uv]
dev-dependencies = [
    "flake8>=5.0.0",
    "black>=22.12.0",
    "isort>=5.11.4",
    # "mypy>=0.991",
    # "pytest>=7.2.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
